# midt

./: .gitignore  README.md  new.txt  pyproject.toml
configs/dqn/: gridworld.yaml
configs/dt/: gridworld.yaml  model.yaml
configs/interp/: default.yaml
scripts/: train_dqn.sh
src/midt/: __init__.py
src/midt/agents/: __init__.py  callbacks.py  dqn_trainer.py
src/midt/data/: __init__.py  dataset.py  storage.py  trajectory.py
src/midt/evaluation/: __init__.py  rollout.py
src/midt/interp/: __init__.py  attention.py  cache.py  patching.py  probing.py
src/midt/models/: __init__.py  decision_transformer.py  embeddings.py  gpt.py
src/midt/scripts/: __init__.py  evaluate.py  run_interp.py  train_dqn.py  train_dt.py
src/midt/training/: __init__.py  trainer.py
src/midt/utils/: __init__.py  config.py  seeding.py
